--- a/index.html
+++ b/index.html
@@ -222,16 +222,12 @@
 							
 							<div class="12u">
 								<article class="box style2">
-									<h3>Current</h3>
 									<p>
-									  Spring 2020 - Programming for Data Science, Yale-NUS College (Singapore).<br/>
-									  Spring 2020 - Operating Systems, Yale-NUS College (Singapore).<br/>
-									</p>
-									<h3>Past</h3>
-									<p>
-									  2019 - Now : Programming for Data Science, Yale-NUS College (Singapore).<br/>
-									  2019 - Now : Sofware Engineering, Yale-NUS College (Singapore).<br/>
-									  2018 - Now : Operating Systems, Yale-NUS College (Singapore).<br/>
+									  2022 - 2024 : Hardware Design and Micro-Architecture, Yale-NUS College (Singapore).<br/>
+									  2019 - 2024 : Programming for Data Science, Yale-NUS College (Singapore).<br/>
+									  2022 - 2023 : Introduction to Computer Science, Yale-NUS College (Singapore).<br/>
+									  2019 - 2022 : Sofware Engineering, Yale-NUS College (Singapore).<br/>
+									  2018 - 2024 : Operating Systems, Yale-NUS College (Singapore).<br/>
 									  2019 : Introduction to C, Yale-NUS College (Singapore).<br/>
 									  2018 : Introduction to C, Yale-NUS College (Singapore).<br/>
 									  2016, 2017 : Embedded Systems, University of Edinburgh (UK).<br/>
