Update email and urls

--- a/index.html
+++ b/index.html
@@ -270,13 +270,11 @@
 								<hr />
 								<h3>Find me on ...</h3>
 								
-								<p>Email: bruno.<span class="toto">_change_your_browser_</span>bodin<span class="toto">_remove_it_</span>@yale-nus.edu.sg
+								<p>Email: b<span class="toto">_change_your_browser_</span>bodin<span class="toto">_remove_it_</span>@acm.org
 								</p>
 							 
 								<ul class="social">
-									<li><a href="http://www.inf.ed.ac.uk/people/staff/Bruno_Bodin.html" class="icon fa-at"><span class="label">Profile page</span></a></li>
 									<li><a href="https://github.com/bbodin" class="icon fa-github"><span class="label">Github</span></a></li>
-									<li><a href="https://bitbucket.org/bodinbla" class="icon fa-bitbucket"><span class="label">Bitbucket</span></a></li>
 								</ul>
 								<hr />
 							</div>
